# pelagos-tui

./: Cargo.toml  LICENSE  QUICKSTART.md  README.md
.github/workflows/: ci.yml
scripts/: install.sh
src/: app.rs  config.rs  main.rs  runner.rs  ui.rs
