[package]
name = "pelagos-tui"
version = "0.5.0"
edition = "2021"
authors = ["skeptomai"]
license = "Apache-2.0"
description = "Terminal UI for the pelagos container runtime"
repository = "https://github.com/pelagos-containers/pelagos-tui"

[[bin]]
name = "pelagos-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
